problem statement links can be edited and added

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -26,7 +26,8 @@
     "iWant": "möchte, ",
     "but": "Aber ",
     "because": "weil ",
-    "feel": "Darum fühle ich mich "
+    "feel": "Darum fühle ich mich ",
+    "addLink": "Problem Statement verknüpfen"
   }
 
 }
