links to problem statements can be removed

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -27,7 +27,8 @@
     "but": "Aber ",
     "because": "weil ",
     "feel": "Darum fühle ich mich ",
-    "addLink": "Problem Statement verknüpfen"
+    "addLink": "Problem Statement verknüpfen",
+    "removeLink": "Verknüpfung löschen"
   }
 
 }
