init functions to add new ps

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -31,7 +31,8 @@
     "feel": "Darum fühle ich mich ",
     "addLink": "Problem Statement verknüpfen",
     "removeLink": "Verknüpfung löschen",
-    "unkonwn": "Problem Statement nicht gefunden"
+    "unkonwn": "Problem Statement nicht gefunden",
+    "new": "Neues Problem Statement"
   }
 
 }
