add ability to cancel workshop creation i18n

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -12,10 +12,14 @@
   "comments": "Kommentare",
   "authors": "Autoren",
   "status": "Status",
+  "cancel": "Abbrechen",
+  "teaser": "Teaser",
+  "createWorkshop": "Erstelle Workshop",
   "workshopType": {
     "ps": "Problem Statement Workshop",
     "idea": "Ideen Workshop",
-    "unkonwn": "unbekannter Workshop Typ"
+    "unkonwn": "unbekannter Workshop Typ",
+    "pick": "Typ auswählen"
   },
   "workshopStatus": {
     "wip": "In Bearbeitung",
